[gd_scene load_steps=18 format=3 uid="uid://c54gow3u0auam"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_bvn0q"]
[ext_resource type="Texture2D" uid="uid://c2xo3n7qyg7md" path="res://Resources/clear-deco-bubble-balloon-20-1pc-12298-p.png" id="2_xekwp"]
[ext_resource type="Texture2D" uid="uid://gi0i8s0lgql0" path="res://Resources/animations/Untitled_design__1_-removebg-preview.png" id="3_0tydw"]
[ext_resource type="Script" path="res://camera_2d.gd" id="3_vrc86"]
[ext_resource type="Texture2D" uid="uid://bx16ay1536swv" path="res://Resources/animations/Untitled_design__2_-removebg-preview.png" id="4_3cnkn"]
[ext_resource type="Texture2D" uid="uid://cijnhjvqjkgpi" path="res://Resources/PNG/OxygenBottle/333.png" id="4_kqhih"]
[ext_resource type="Texture2D" uid="uid://cepdttf6mnqeg" path="res://Resources/animations/Untitled_design__3_-removebg-preview.png" id="5_co462"]
[ext_resource type="Texture2D" uid="uid://cd7bffd6ssp88" path="res://Resources/animations/Untitled_design__4_-removebg-preview.png" id="6_ah0q4"]
[ext_resource type="Texture2D" uid="uid://yo1ku1slwuhr" path="res://Resources/animations/Untitled_design__5_-removebg-preview.png" id="7_057bj"]
[ext_resource type="Texture2D" uid="uid://bnxc2aqnle21g" path="res://Resources/animations/Untitled_design__6_-removebg-preview.png" id="8_udeep"]
[ext_resource type="Texture2D" uid="uid://bacblksx3oosr" path="res://Resources/animations/Untitled_design__7_-removebg-preview.png" id="9_akcca"]
[ext_resource type="Texture2D" uid="uid://y83q20op2i0k" path="res://Resources/animations/Untitled_design__8_-removebg-preview.png" id="10_d58gw"]
[ext_resource type="Texture2D" uid="uid://06q2cx531phv" path="res://Resources/animations/Untitled_design__9_-removebg-preview.png" id="11_p5f4u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fh1j6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y65yp"]
bg_color = Color(0.6, 0.6, 0.6, 0.0509804)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gyi1"]
bg_color = Color(0.246702, 0.304111, 0.876016, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_n4lro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0tydw")
}, {
"duration": 1.0,
"texture": ExtResource("4_3cnkn")
}, {
"duration": 1.0,
"texture": ExtResource("5_co462")
}, {
"duration": 1.0,
"texture": ExtResource("6_ah0q4")
}, {
"duration": 1.0,
"texture": ExtResource("7_057bj")
}, {
"duration": 1.0,
"texture": ExtResource("8_udeep")
}, {
"duration": 1.0,
"texture": ExtResource("9_akcca")
}, {
"duration": 1.0,
"texture": ExtResource("10_d58gw")
}, {
"duration": 1.0,
"texture": ExtResource("11_p5f4u")
}, {
"duration": 1.0,
"texture": ExtResource("10_d58gw")
}, {
"duration": 1.0,
"texture": ExtResource("9_akcca")
}, {
"duration": 1.0,
"texture": ExtResource("8_udeep")
}, {
"duration": 1.0,
"texture": ExtResource("7_057bj")
}, {
"duration": 1.0,
"texture": ExtResource("6_ah0q4")
}, {
"duration": 1.0,
"texture": ExtResource("5_co462")
}, {
"duration": 1.0,
"texture": ExtResource("4_3cnkn")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(580, 318)
script = ExtResource("1_bvn0q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6.885, 6.885)
shape = SubResource("CircleShape2D_fh1j6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.275, 0.275)
texture = ExtResource("2_xekwp")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0.448425, 0)
scale = Vector2(0.448369, 0.448369)
zoom = Vector2(0.825, 0.825)
limit_left = -10000
limit_right = 10000
limit_bottom = 820
position_smoothing_enabled = true
position_smoothing_speed = 0.5
script = ExtResource("3_vrc86")

[node name="LayerBar" type="CanvasLayer" parent="Camera2D"]

[node name="OxygenBottle" type="Sprite2D" parent="Camera2D/LayerBar"]
position = Vector2(459, 212)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_kqhih")

[node name="HealthBar" type="ProgressBar" parent="Camera2D/LayerBar"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -641.0
offset_top = 209.0
offset_right = -467.0
offset_bottom = 223.0
grow_horizontal = 0
scale = Vector2(1.76, 1.76)
theme_override_styles/background = SubResource("StyleBoxFlat_y65yp")
theme_override_styles/fill = SubResource("StyleBoxFlat_7gyi1")
max_value = 10.0
value = 6.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="FlashAnimation" type="AnimationPlayer" parent="Camera2D/LayerBar/HealthBar"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.375, 0.375)
sprite_frames = SubResource("SpriteFrames_n4lro")
autoplay = "default"
frame_progress = 0.31246

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 0.064

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(6.885, 6.885)
shape = SubResource("CircleShape2D_fh1j6")

[connection signal="timeout" from="HealthTimer" to="." method="_on_health_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
